Modify base url

--- a/app/card.css
+++ b/app/card.css
@@ -42,7 +42,7 @@ body {
     width: 100%;
     border-style: solid;
     border-bottom-width: 0.5rem;
-    border-image: url(https://qoomon.github.io/Jira-Issue-Card-Printer/resources/Tearing.png);
+    border-image: url(https://github.com/smallg/Jira-Issue-Card-Printer/dist/resources/Tearing.png);
     border-image-width: 0 0 0.7rem 0;
     border-image-slice: 56 0 56 1;
     border-image-repeat: round round;
@@ -162,7 +162,7 @@ body {
   width: 3.0rem;
   border-radius: 50%;
   background-color: DEEPSKYBLUE;
-  background-image: url(https://qoomon.github.io/Jira-Issue-Card-Printer/resources/icons/CloudLoading.png);
+  background-image: url(https://github.com/smallg/Jira-Issue-Card-Printer/dist/resources/icons/CloudLoading.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 63%;
@@ -199,7 +199,7 @@ body {
   height: 2.0rem;
   border-radius: 50%;
   background-color: LIGHTSKYBLUE;
-  background-image: url(https://qoomon.github.io/Jira-Issue-Card-Printer/resources/icons/Attachment.png);
+  background-image: url(https://github.com/smallg/Jira-Issue-Card-Printer/dist/resources/icons/Attachment.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 70%;
@@ -275,7 +275,7 @@ body {
   height: 2.5rem;
   border-radius: 50%;
   background-color: ORCHID;
-  background-image: url(https://qoomon.github.io/Jira-Issue-Card-Printer/resources/icons/AlarmClock.png);
+  background-image: url(https://github.com/smallg/Jira-Issue-Card-Printer/dist/resources/icons/AlarmClock.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 65%;
