--- a/app/card.css
+++ b/app/card.css
@@ -121,6 +121,7 @@ body {
 .issue-summary {
   font-weight: bold;
   font-size: 0.9rem;
+  margin-bottom: 1rem;
 }
 .issue-description {
   margin-top: 0.1rem;
@@ -208,9 +209,7 @@ body {
   position: relative;
   float: right;
   margin-left: 0.5rem;
-  width: 2.2rem;
-  height: 2.2rem;
-  border-radius: 50%;
+  height: 1.5rem;
   background-color: WHITESMOKE;
   background-repeat: no-repeat;
   background-position: center;
@@ -220,11 +219,10 @@ body {
   text-align: center;
   font-weight: bold;
   font-size: 1.0rem;
-  line-height: 2.0rem;
 }
 .issue-tags-box {
   position: relative;
-  float: right;
+  float: left;
   width: auto;
   min-width: 2rem;
   width: auto;
